# LYSOSiPM

./: .gitmodules  CMakeLists.txt  GNUmakefile  LYSOSiPM.cc  LYSOSiPM.in  LYSOSiPM.out  README.md  cmd.sh  gui.mac  init_vis.mac  run1.mac  run2.mac  run_cornor_s10_md.mac  run_cornor_s11.mac  run_cornor_s11_md.mac  run_cornor_s12_md.mac  run_cornor_s4_md.mac  run_cornor_s5_md.mac  run_cornor_s8.mac  run_cornor_s9_md.mac  run_edge_s10.mac  run_edge_s10_md.mac  run_edge_s11_md.mac  run_edge_s12.mac  run_edge_s12_md.mac  run_edge_s4.mac  run_edge_s4_md.mac  run_edge_s5.mac  run_edge_s5_md.mac  run_edge_s6.mac  run_edge_s6_md.mac  run_edge_s7.mac  run_edge_s7_md.mac  run_edge_s8_md.mac  run_edge_s9.mac  run_edge_s9_md.mac  run_x0_md.mac  run_x2.mac  run_x2_md.mac  run_x4.mac  (+3 more)
include/: LYSOSiPMActionInitialization.hh  LYSOSiPMAnalysis.hh  LYSOSiPMDetectorConstruction.hh  LYSOSiPMEventAction.hh  LYSOSiPMPhysicsList.hh  LYSOSiPMPrimaryGeneratorAction.hh  LYSOSiPMRunAction.hh  LYSOSiPMSteppingAction.hh
mac/: run_x0.mac  run_x5.mac
macros/TBdata/: Nov_FNAL_TB2018_1mm.C  Run702To750.sh  Run706.sh  all_cmd_June2018.sh  all_cmd_June2018_1mm.sh  allcmd.sh  allcmd2.sh  allcmd3.sh  allcmd4_interest.sh  copytree2.C  fastplotter.C  fastplotter_V3.C  goodplot_0618.C  goodplot_0618_v2.C  goodplot_0618_v5.C  goodplot_0618_v5_final.C  goodplot_0618_v5_final_1mm.C  goodplot_0618_v5_final_charge.C  goodplot_V3.C  goodplot_V3_3mm.C  goodplot_V3_6mm.C  goodplot_V4.C  goodplot_V4_3mm.C  goodplot_all.C  offsetX_vs_bias.py  offsetY_vs_bias.py  offset_vs_bias.py  offset_vs_bias_3mm.py  part_cmd_June2018_1mm.sh  plot_vs_aspectratio.py  plot_vs_aspectratio_1mm.py  plot_vs_aspectratio_upstream.py  remove_pulse.sh  resolution_vs_bias.py  resolution_vs_bias_3mm.py  resolution_vs_bias_tw.py  resolution_vs_bias_twxy.py  resolution_vs_bias_xy.py  setup.sh  testcmd.sh  (+2 more)
macros/geant4Data/: .__afs18D5  LYSO_properties.C  all_vs_sipmsize.py  allcmd.sh  amp_vs_sipmsize.py  average_pulse.C  average_pulse_zoom.C  average_pulse_zoom_fold.C  count.txt  goodplot.C  goodplot_C.d  goodplot_C_ACLiC_dict_rdict.pcm  goodplot_nocompile.C  ntuple.root  offset_vs_sipmsize.py  plot_allcmd.sh  plots_scan.py  reco_allcmd.sh  rereco.C  rereco_C.d  rereco_C_ACLiC_dict_rdict.pcm  rereco_nocompile.C  scan_LYSO_polish_nogit.sh  scan_LYSO_thickness_md.sh  scan_LYSO_thickness_md_nogit.sh  (+10 more)
src/: LYSOSiPMActionInitialization.cc  LYSOSiPMDetectorConstruction.cc  LYSOSiPMEventAction.cc  LYSOSiPMPhysicsList.cc  LYSOSiPMPrimaryGeneratorAction.cc  LYSOSiPMRunAction.cc  LYSOSiPMSteppingAction.cc
(+63 files in other folders)
